# fxseq

./: CMakeLists.txt  DOCUMENTATION.md  HISTORY.md  JUCE  README.md  fxseq.jucer  log.txt
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Info-AU.plist  Info-LV2_Manifest_Helper.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/fxseq.xcodeproj/: project.pbxproj
Builds/VisualStudio2017/: fxseq.sln  fxseq_LV2ManifestHelper.vcxproj  fxseq_LV2Plugin.vcxproj  fxseq_LV2Plugin.vcxproj.filters  fxseq_SharedCode.vcxproj  fxseq_SharedCode.vcxproj.filters  fxseq_StandalonePlugin.vcxproj  fxseq_VST3.vcxproj  fxseq_VST3.vcxproj.filters  fxseq_VST3ManifestHelper.vcxproj  resources.rc
JuceLibraryCode/: JuceHeader.h  JuceLV2Defines.h  JucePluginDefines.h
Ressources/presets/: Default.xml  default.xml  new.xml  test.xml  toto.xml
Ressources/scripts/: build_linux_vst3.sh  cmake_build.sh  copy_plugin_data.sh  copy_plugin_data_linux.sh  copy_plugin_data_windows.cmd  git_update.sh  rebuild_linux_vst3.sh
Ressources/skins/default/: _skin.xml  skin.xml
Ressources/skins/test/: skin.xml
Source/: Distortion.h  EffectComponent.cpp  EffectComponent.h  FaustCombFilterEffect.cpp  FaustEchoEffect.h  FaustEffects.h  FaustPitchShifter.h  FaustRingMod.h  FaustRingModEffect.h  FaustRingmodEffect (copy).cpp  Filter.h  OptionsComponent.cpp  OptionsComponent.h  OutputComponent.cpp  OutputComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SequenceSequencerComponent.cpp  SequenceSequencerComponent.h  SequencerComponent.cpp  SequencerComponent.h  bkup.PluginEditor.cpp  bkup.PluginEditor.h
Source/effects/: Bitcrusher.h  Chopper.h  DirtyRepeater.h  Distortion.h  FaustCombFilter.h  FaustEcho.h  FaustPitchShifter.h  FaustRepeater.h  FaustRingMod.h  Filter.h  TimeStretcher.h
Source/ui/: EffectComponent.cpp  EffectComponent.h  OptionsComponent.cpp  OptionsComponent.h  OutputComponent.cpp  OutputComponent.h  SequenceSequencerComponent.cpp  SequenceSequencerComponent.h  SequencerComponent.cpp  SequencerComponent.h
